# milestones-1-and-2

./: .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt
data/samples/: primevul_test_sample.jsonl  primevul_train_sample.jsonl  primevul_valid_sample.jsonl
src/: main.py
src/commands/: download_dataset.py  process_embeddings.py  read_tensor.py  train_logistic_regression.py  train_svm.py
src/data/: primevul.py
src/embeddings/: embedder.py
src/ml/: logistic_regression.py  svm.py
src/utils/: parser.py
