[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "cpp-vulnerability-detection"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pandas~=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers~=5.5.0",
]

[project.scripts]
process-embeddings = "src.commands.process_embeddings:main"
download-dataset = "src.commands.download_dataset:main"
read-tensor = "src.commands.read_tensor:main"
train-lr = "src.commands.train_logistic_regression:main"
train-svm = "src.commands.train_svm:main"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages.find]
include = ["src*"]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
]
